Initial commit for MRG-PROFILE-2025

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+3e43d84 (Initial commit for MRG-PROFILE-2025)
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +9,10 @@
     <!-- ลิงก์ไปยังไฟล์ CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
+
 <body>
+3e43d84 (Initial commit for MRG-PROFILE-2025)
     <!-- Header Section -->
     <header>
         <img src="images/logo.png" alt="Company Logo" class="logo">
